# recommendation-toolkits

./: README.md  pyproject.toml  requirements.txt
models/: Pretrained.py  Recommend.py
models/embeddings/: alias.py  embedding_models.py
